--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>⚡ 7OOP Laboratory Projects</h1>
+      <h1> 7OOP Laboratory Projects</h1>
       <p class="subtitle">Showcasing projects completed during 7OOP studies</p>
     </header>
 
@@ -26,18 +26,17 @@
     <section class="beliefs">
       <h2>What I Believe In</h2>
       <ul>
-        <li>Everything happens for a reason.</li>
-        <li>Do what makes you happy.</li>
-        <li>If you think money can’t buy happiness, give it to me.</li>
+        <li>🥂Everything happens for a reason.</li>
+        <li>🥰Do what makes you happy.</li>
       </ul>
     </section>
 
     <section class="education">
       <h2>Education</h2>
       <ul>
-        <li>Senior High School: Angeles City National Trade School</li>
-        <li>Junior High School: Angeles City National Trade School</li>
-        <li>Elementary: Cut-cut Elementary School</li>
+        <li>🎓Senior High School: Angeles City National Trade School</li>
+        <li>🎓Junior High School: Angeles City National Trade School</li>
+        <li>🎓Elementary: Cut-cut Elementary School</li>
       </ul>
     </section>
 
@@ -66,21 +65,21 @@
     <section class="interests">
       <h2>Areas of Interest</h2>
       <ul>
-        <li>Learning new things</li>
-        <li>Self-improvement</li>
-        <li>Reading books (Wattpad stories)</li>
-        <li>Exploring new places and trying different foods</li>
+        <li>🎾 Learning new things</li>
+        <li>👍 Self-improvement</li>
+        <li>📖 Reading books (Wattpad stories)</li>
+        <li>💊 Exploring new places and trying different foods</li>
       </ul>
     </section>
 
     <section class="fun-facts">
       <h2>Fun Facts About Me</h2>
       <ul>
-        <li>I enjoy both group activities and quiet solo time.</li>
-        <li>I love listening to music.</li>
-        <li>I have higher energy at night.</li>
-        <li>I can't start the day without coffee.</li>
-        <li>I laugh at my own jokes.</li>
+        <li>🎎 I enjoy both group activities and quiet solo time.</li>
+        <li>🎸 I love listening to music.</li>
+        <li>🌃 I have higher energy at night.</li>
+        <li>☕ I can't start the day without coffee.</li>
+        <li>🎭 I laugh at my own jokes.</li>
       </ul>
     </section>
 
@@ -88,7 +87,7 @@
       <h2>Skills</h2>
       <ul>
         <li>Time management ⌚</li>
-        <li>Problem Solving</li>
+        <li>Problem Solving 🧮</li>
       </ul>
     </section>
 
