--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section class="profile">
-      <img src="photo.jpg" alt="Hannizel Dumangas" class="profile-img">
+      <img src=images/Messenger_creation_224F520D-88C4-4B14-BB4F-F762E5BAC568.jpeg">
     </section>
 
     <section class="about">
