--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
 
     <section class="profile">
 <p align="center">
-  <img Src = "/images/Messenger_creation_224F520D-88C4-4B14-BB4F-F762E5BAC568.jpeg"
+  <img Src = "https://github.com/lezinnahdumangas-del/7OOP_LAB_TASK/blob/ca755dc8a785e9cec5bfb69808334abbc93ff10f/images/Messenger_creation_224F520D-88C4-4B14-BB4F-F762E5BAC568.jpeg"
   width="190" height="250" />
 </p>
 
     <section class="about">
-      <h2>About Me</h2>
+      <h2>🎀About Me🎀</h2>
       <p>I am an enthusiastic Computer Science student. I enjoy learning new skills and collaborating with others. My goal is to continue growing academically and professionally.</p>
     </section>
 
     <section class="beliefs">
-      <h2>What I Believe In</h2>
+      <h2>W🥂hat I Believe In</h2>
       <ul>
-        <li>🥂Everything happens for a reason.</li>
-        <li>🥰Do what makes you happy.</li>
+        <li>Everything happens for a reason.</li>
+        <li>Do what makes you happy.</li>
       </ul>
     </section>
 
     <section class="education">
-      <h2>Education</h2>
+      <h2>🎓Education</h2>
       <ul>
-        <li>🎓Senior High School: Angeles City National Trade School</li>
-        <li>🎓Junior High School: Angeles City National Trade School</li>
-        <li>🎓Elementary: Cut-cut Elementary School</li>
+        <li>Senior High School: Angeles City National Trade School</li>
+        <li>Junior High School: Angeles City National Trade School</li>
+        <li>Elementary: Cut-cut Elementary School</li>
       </ul>
     </section>
 
@@ -65,7 +65,7 @@
     </section>
 
     <section class="interests">
-      <h2>Areas of Interest</h2>
+      <h2>🌹Areas of Interest</h2>
       <ul>
         <li>🎾 Learning new things</li>
         <li>👍 Self-improvement</li>
@@ -75,7 +75,7 @@
     </section>
 
     <section class="fun-facts">
-      <h2>Fun Facts About Me</h2>
+      <h2>💃Fun Facts About Me💃</h2>
       <ul>
         <li>🎎 I enjoy both group activities and quiet solo time.</li>
         <li>🎸 I love listening to music.</li>
@@ -86,7 +86,7 @@
     </section>
 
     <section class="skills">
-      <h2>Skills</h2>
+      <h2>🧰Skills</h2>
       <ul>
         <li>Time management ⌚</li>
         <li>Problem Solving 🧮</li>
@@ -94,7 +94,7 @@
     </section>
 
     <section class="contacts">
-      <h2>Contacts</h2>
+      <h2>☎️Contacts</h2>
       <ul>
         <li><a href="https://www.facebook.com/honey.dmgs?mibextid=ZbWKwL">Facebook</a></li>
         <li><a href="https://www.instagram.com/ha_yahhh12?igsh=OTlzY283aGQ0dTFw">Instagram</a></li>
