--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <section class="beliefs">
-      <h2>W🥂hat I Believe In</h2>
+      <h2>🥂What I Believe In</h2>
       <ul>
         <li>Everything happens for a reason.</li>
         <li>Do what makes you happy.</li>
