--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2>Projects</h2>
       <h3>Midterms</h3>
       <ul>
-        <li><a href="https://sg.docworkspace.com/d/sIJbF4v2GAqn78scG">LAB TASK1: Object-Oriented Analysis</a></li>
+        <li><a href="MIDTERM/m_task1.pdf">LAB TASK1: Object-Oriented Analysis</a></li>
         <li><a href="https://sg.docworkspace.com/d/sIGbF4v2GAoSO58cG">LAB TASK 1: Using Appropriate Escape Sequence</a></li>
         <li><a href="https://sg.docworkspace.com/d/sIJjF4v2GAr2P58cG">LAB TASK 2: Loops and Functions</a></li>
         <li><a href="https://sg.docworkspace.com/d/sIELF4v2GAqmR58cG">LAB TASK 3: List and Collection Types</a></li>
