--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <h2>Projects</h2>
       <h3>Midterms</h3>
       <ul>
-        <li><a href="MIDTERM/m_task1.pdf">LAB TASK1: Object-Oriented Analysis</a></li>
-        <li><a href="https://sg.docworkspace.com/d/sIGbF4v2GAoSO58cG">LAB TASK 1: Using Appropriate Escape Sequence</a></li>
-        <li><a href="https://sg.docworkspace.com/d/sIJjF4v2GAr2P58cG">LAB TASK 2: Loops and Functions</a></li>
-        <li><a href="https://sg.docworkspace.com/d/sIELF4v2GAqmR58cG">LAB TASK 3: List and Collection Types</a></li>
-        <li><a href="https://sg.docworkspace.com/d/sIK3F4v2GAr6U58cG">LAB TASK 4: Dictionaries</a></li>
-        <li><a href="https://sg.docworkspace.com/d/sIDzF4v2GAsWV58cG">LAB TASK 5: Classes and Instantiating Objects</a></li>
+        <li><a href="MIDTERM/DiazDumangas_c204_pairedAct.pdf">LAB TASK1: Object-Oriented Analysis</a></li>
+        <li><a href="MIDTERM/m_task1.pdf">LAB TASK 1: Using Appropriate Escape Sequence</a></li>
+        <li><a href="MIDTERM/LabTask 2.pdf">LAB TASK 2: Loops and Functions</a></li>
+        <li><a href="MIDTERM/HannizelDumangas.pdf">LAB TASK 3: List and Collection Types</a></li>
+        <li><a href="MIDTERM/HannizelDumangas.pdf">LAB TASK 4: Dictionaries</a></li>
+        <li><a href="MIDTERM/Midterm Lab Task 5 Creating Classes and Objects.pdf">LAB TASK 5: Classes and Instantiating Objects</a></li>
       </ul>
       <h3>Finals</h3>
       <ul>
