--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
       </ul>
       <h3>Finals</h3>
       <ul>
-        <li><a href="https://sg.docworkspace.com/d/sIKHF4v2GAu2X58cG">LAB TASK 1: Encapsulation</a></li>
+        <li><a href="FINALS/LabTask1Finals.pdf">LAB TASK 1: Encapsulation</a></li>
+        <li><a href="FINALS/LabTask2Finals.pdf">LAB TASK 2: Inheritance</a></li>
+        <li><a href="FINALS/LabTask3Finals.pdf">LAB TASK 3: Polymorphism</a></li>
+        <li><a href="FINALS/LabTask4Finals.pdf">LAB TASK 4: Python and Tkinter</a></li>
+        <li><a href="FINALS/LabTask5Finals.pdf">LAB TASK 5: CLI using Mysql and Python</a></li>
+        <li><a href="FINALS/LabTask6Finals.pdf">LAB TASK 6: MySQL CRUD Operations in Python Using GUI Tkinter</a></li>
       </ul>
     </section>
 
